# stock

./: .gitignore  pyproject.toml  test.py
src/stock/: main.py
src/stock/.env/: .env
src/stock/api/controllers/: cripto.ipynb  cripto_currencies.py
src/stock/api/services/: alphavantage.py
src/stock/config/: .env
src/stock/extract/: api_alphavantage.py  api_extractor.py
src/stock/extract/data/: alphavatnage.csv  output.csv  response.csv
src/stock/load/: load_to_bigquery.py
src/stock/transform/: cripto_currencies.ipynb  cripto_currencies.py  netflix.ipynb  transform_digital_currency.py
