[project]
name = "stock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MELLO", email = "ing.matiasgays@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.10.5",
    "dotenv>=0.9.9",
    "google-cloud-bigquery>=3.38.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pandas-gbq>=0.29.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.scripts]
stock = "stock:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
